# usd-rs

./: .gitignore  .gitmodules  Cargo.toml  build.rs
examples/: animation_editor.rs  cube.usda  cube_animated.usda  deserialize_file.rs  simple.rs  simple_cube.usda
ffi/: .clang-format  CMakeLists.txt
ffi/Examples/: CMakeLists.txt  simple.cpp
ffi/Include/usdffi/: ffi.h
ffi/Sources/: CMakeLists.txt
ffi/Sources/Libraries/: CMakeLists.txt
ffi/Sources/Libraries/usdffi/: CMakeLists.txt  ffi.cpp
src/: ascii_reader.rs  attribute_ref.rs  geom_cube.rs  geom_mesh.rs  geom_mesh_ref.rs  lib.rs  load_state.rs  path.rs  prim_ref.rs  stage_ref.rs  stream_reader.rs  x_form_ref.rs  xform_op_ref.rs
src/serializer/: analyzer.rs  mod.rs  syntax_tree.rs  tokens.rs  types.rs  universal_scene_description_file.rs
src/util/: float_types.rs  mod.rs
src/value/: mod.rs  time_samples.rs  value.rs
