[package]
name = "usd-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
phf = { version = "0.11",   features = ["macros"] }
num-traits = "0.2"

[dev-dependencies]
egui = "0.21.0"
eframe = "0.21.0"
